# software-testing-craftmans-approach

./: CMakeLists.txt  README.md
include/: commission.hpp  next_date.hpp  triangle.hpp
src/: commission.cpp  next_date.cpp  triangle.cpp
test/boundary/: test_commission.cpp  test_next_date.cpp  test_triangle.cpp
